# -Reactor-FTP-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  changeway.txt  client_use.txt  lv_conf.h  lvuse.md  main.c  rebuild.sh  usetest.txt
.claude/: settings.local.json
.trae/specs/add-delete-feature/: checklist.md  spec.md  tasks.md
.trae/specs/add-duplicate-file-detection/: checklist.md  spec.md  tasks.md
.trae/specs/add-folder-recursive-delete/: checklist.md  spec.md  tasks.md
.trae/specs/add-long-press-folder-transfer/: checklist.md  spec.md  tasks.md
.trae/specs/add-server-folder-navigation/: checklist.md  spec.md  tasks.md
.trae/specs/add-transfer-throttle/: checklist.md  spec.md  tasks.md
.trae/specs/enhance-delete-confirmation/: checklist.md  spec.md  tasks.md
.trae/specs/fix-folder-download-and-popup/: checklist.md  spec.md  tasks.md
.trae/specs/fix-folder-download-only-one-file/: checklist.md  spec.md  tasks.md
.trae/specs/fix-folder-transfer-and-progress/: checklist.md  spec.md  tasks.md
.trae/specs/fix-folder-upload-only-one-file/: checklist.md  spec.md  tasks.md
.trae/specs/fix-partial-write-data-loss/: checklist.md  spec.md  tasks.md
.zcode/plans/: plan-sess_05b2411e-0fce-46c3-8c5c-eda8d5326666.md
client/: network_task.c  network_task.h  ui_manager.c  ui_manager.h  yes.txt
client/load/: hello.txt  sample.txt
copy/: upload_me.txt
freetype-2.13.3/: CMakeLists.txt
server/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  build.sh  cmake_install.cmake  users.conf
server/copy/: hello.txt
server/copy/hahahah/: henghengheng.txt
server/copy/testdownload001/: ooo.txt  yuyu.txt
server/freetype-2.13.3/: Makefile  cmake_install.cmake
server/inc/: handler.h  ipc_shm.h  protocol.h  sys_auth.h  thread_pool.h
server/lvgl/: Makefile  cmake_install.cmake
server/remote_share/: hello.txt  test_readme.txt
server/src/: handler.c  ipc_shm.c  main.c  protocol.c  sys_auth.c  thread_pool.c
(+39 files in other folders)
